[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/scenes/inventor/purpose_selector.gd" id="1"]

[node name="PurposeSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "My machine will..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pick a purpose (just for fun!)"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 4
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="SkipButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Skip - Just Build!"
